zammad: Add volumePermissions

--- a/charts/zammad/templates/statefulset.yaml
+++ b/charts/zammad/templates/statefulset.yaml
@@ -23,6 +23,21 @@ spec:
       imagePullSecrets: {{ toYaml .Values.image.imagePullSecrets | nindent 6 }}
       {{- end }}
       initContainers:
+      {{- if .Values.volumePermissions -}}
+      - name: data-chmod
+        image: alpine:3.14
+        command:
+        - /bin/sh
+        - -cx
+        - |
+          chown 1000:1000 -R /opt/zammad
+        securityContext:
+          runAsNonRoot: false
+          runAsUser: 0
+        volumeMounts:
+        - name: {{ template "zammad.fullname" . }}
+          mountPath: /opt/zammad
+      {{- end -}}
       - name: zammad-init
         image: {{ .Values.image.repository }}:{{if eq .Values.image.repository "zammad/zammad-docker-compose"}}zammad-{{ end }}{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
